--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,32 +1,45 @@
 builds:
-  - binary: askcloudhelloworld
+  - binary: obbkit
+    env:
+      - CGO_ENABLED=0
     goos:
-      - darwin
       - linux
+      - windows
+      - darwin
     goarch:
       - amd64
       - arm64
-    env:
-      - CGO_ENABLED=0
     flags:
       - -mod=vendor
-
-release:
-  prerelease: auto
-
-universal_binaries:
-  - replace: true
-
-brews:
-  -
-    name: obbkit
-    homepage: https://github.com/AdeboyeDN/obbkit
-    tap:
-      owner: AdeboyeDN
-      name: homebrew-adeboyedn
-    commit_author:
-      name: AdeboyeDN
-      email: adeboyed93@gmail.com
-
+archives:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
+snapshot:
+  name_template: "{{ incpatch .Version }}-next"
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+release:
+  prerelease: auto
+universal_binaries:
+  - replace: true
+brews:
+  -
+   name: obbkit
+   homepage: https://github.com/AdeboyeDN/obbkit
+   tap:
+    owner: AdeboyeDN
+    name: homebrew-adeboyedn
+   commit_author:
+    name: AdeboyeDN
+    email: adeboyed93@gmail.com
+    
