--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,6 +3,8 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
+      - linux
+      - windows
       - darwin
     goarch:
       - amd64
@@ -12,6 +14,8 @@ builds:
 archives:
   - replacements:
       darwin: Darwin
+      linux: Linux
+      windows: Windows
       386: i386
       amd64: x86_64
 checksum:
