--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obbkit-cli",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "A CLI tool for generating boilerplates with onboardbase preconfigured in them as a SecOps infrastructure. ",
   "main": "index.js",
   "scripts": {
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/Onboardbase/obbkit#readme",
   "dependencies": {
-    "obbkit-cli": "^0.0.5",
+    "obbkit-cli": "^0.0.7",
     "global": "^4.4.0",
     "go-npm": "^0.1.9"
   },
   "goBinary": {
     "name": "obbkit",
-    "path": "./bin",
+    "path": "",
     "url": "https://github.com/Onboardbase/obbkit/releases/download/v{{version}}/obbkit_{{version}}_{{platform}}_{{arch}}.tar.gz"
   }
 }
